[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "mlex_utils"
version = "0.0.1"
description = "MLExchange Utils"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

# All dependencies are optional
# Use pip install mlex_utils[all] to get everything
dependencies = []

[project.optional-dependencies]
all = [
    "prefect==2.14.21",
    "dash==2.9.3",
    "dash-bootstrap-components==1.6.0",
    "dash-mantine-components==0.12.1",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-iconify==0.1.2",
    "griffe >= 0.49.0, <1.0.0",
]

prefect = [
    "prefect==2.14.21",
    "griffe >= 0.49.0, <1.0.0",
]

dash = [
    "dash==2.9.3",
    "dash-bootstrap-components==1.6.0",
    "dash-mantine-components==0.12.1",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-iconify==0.1.2",
]

dev = [
    "black==24.2.0",
    "dash[testing]==2.9.3",
    "flake8==7.0.0",
    "isort==5.13.2",
    "pre-commit==3.6.2",
    "pytest==8.1.1",
]
